# allianceauth-corp-tools-moons

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .prettierignore  MANIFEST.in  Makefile  README.md  pyproject.toml  requirements.txt  setup.py  tox.ini
.circleci/: config.yml
.github/workflows/: main.yml  publish.yml
.tx/: transifex.yml
moons/: __init__.py  admin.py  api.py  app_settings.py  apps.py  auth_hooks.py  helpers.py  managers.py  models.py  mooncogs.py  providers.py  schema.py  tasks.py  urls.py  views.py
moons/fixtures/: __init__.py  moons_sde.json
moons/locale/de/LC_MESSAGES/: django.po
moons/locale/en/LC_MESSAGES/: django.po
moons/management/commands/: current_tax_outstanding.py  load_moons.py  moons_fix_null_moons.py  moons_load_moons.py  moons_setup_tool.py  moons_tax_outstanding.py  moons_update_prices.py  setup_moon_tool.py
moons/migrations/: 0001_initial.py  0002_auto_20201128_1356.py  0003_auto_20201205_0606.py  0004_auto_20201205_0626.py  0005_remove_miningobservation_frack.py  0006_miningobservation_structure.py  0007_miningtax_oreprice_oretax_oretaxrates.py  0008_auto_20210827_1015.py  0009_alter_miningtax_flat_tax_rate.py  0010_miningobservation_moon.py  0011_oretax_tax.py  0012_rename_excptional_rate_oretaxrates_exceptional_rate.py  0013_auto_20210904_0948.py  0014_invoicerecord_tax_dump.py  0015_auto_20210906_0915.py  0016_invoicerecord_base_ref.py  0017_moonrental.py  0018_alter_moonfrack_options.py  0019_oreprice_goo_only_oretaxrates_ignore_ores_in_refine.py  0020_alter_moonrental_price.py  0021_alter_frackore_ore_alter_miningobservation_moon_and_more.py  0022_oretaxrates_tax_on_base_ore_value.py
moons/static/moons/: asset-manifest.json  assets  manifest.json  static
moons/static/moons/assets/: @libs-BNv0FUaU.js  @libs-BNv0FUaU.js.map  @libs-DBVnFMLF.js  @libs-DBVnFMLF.js.map  @libs-KHifEHW5.js  @libs-rfllBq4_.js  @libs-rfllBq4_.js.map  @react-router-BiKtSVvI.js  @react-router-BiKtSVvI.js.map  @react-router-DqRKzpb-.js  @react-router-DqRKzpb-.js.map  @react-router-EnUnxFeH.js  @react-router-yVXNZi-v.js  @react-router-yVXNZi-v.js.map  index-9WLTPqAL.js  index-9WLTPqAL.js.map  index-B26qeq8w.js  index-B26qeq8w.js.map  index-C2OEXEOm.js  (+22 more)
moons/templates/moons/: base.html  list.html  observers.html  react_base.html
moons/templatetags/: moon_tags.py
moons/tests/: test_access.py  test_helpers.py
moons_src/: copy-assets.sh  global.d.ts  i18next-parser.config.mjs  index.html  package.json  tsconfig.json  vite.config.js  vite.config.ts
moons_src/src/: Moons.jsx  Moons.tsx  index.css  main.tsx  types.ts
moons_src/src/components/: ApiSelect.tsx  ColumnFilter.ts  ErrorBoundary.tsx  ExplainTax.tsx  MoonMenu.jsx  MoonMenu.tsx  MoonRentalPannel.tsx  NavLinkActive.tsx  OreColourKey.module.css  OreColourKey.tsx  OreProgress.tsx  OutstandingTax.tsx  TimeAndSince.tsx
moons_src/src/helpers/: Api.js  Api.ts
moons_src/src/pages/: Admin.tsx  CorporateLedger.jsx  CorporateLedger.tsx  FutureExtractions.jsx  FutureExtractions.tsx  MoonsPage.tsx  PastLedger.jsx  PastLedger.tsx
src/: package.json
src/public/: index.html
src/src/: App.css  App.js  Moons.js  Moons.jsx  index.js
src/src/components/: ApiSelect.js  BaseTable.jsx  ExplainTax.js  ExplainTax.jsx  MoonMenu.js  MoonMenu.jsx  MoonRentalPannel.js  OreColourKey.js  OreColourKey.jsx  OutstandingTax.js  PanelLoader.js
src/src/helpers/: Api.js
src/src/pages/: Admin.js  CorporateLedger.js  FutureExtractions.js  Overview.js  PastLedger.js
testauth/settings/: base.py  local.py
tests/: celery.py  test_settings.py  test_settingsAA3.py  test_settingsAA4.py  urls.py
(+12 files in other folders)
